[gd_scene load_steps=9 format=2]

[ext_resource path="res://Buildng Powering Puzzle/NP/Sprites/ExtraHUD Sprites/SelectCountBkg.png" type="Texture" id=1]
[ext_resource path="res://Buildng Powering Puzzle/NP/Test/ExtraHUD.gd" type="Script" id=2]
[ext_resource path="res://Buildng Powering Puzzle/NP/Sprites/Map Border.png" type="Texture" id=3]
[ext_resource path="res://Buildng Powering Puzzle/NP/Sprites/ExtraHUD Sprites/Map Controls Background.png" type="Texture" id=4]
[ext_resource path="res://Buildng Powering Puzzle/NP/Test/Map.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Hide Select Count"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SelectCount:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SelectCount:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Show Select Count"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SelectCount:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, 602.0 ]
}

[node name="ExtraHUD" type="Node2D"]
script = ExtResource( 2 )

[node name="SelectCount" type="Node2D" parent="."]
visible = false
position = Vector2( 640, 91 )

[node name="Background" type="Sprite" parent="SelectCount"]
modulate = Color( 1, 1, 1, 0.854902 )
position = Vector2( -48, 0 )
texture = ExtResource( 1 )
centered = false

[node name="SelectCountLabel" type="Label" parent="SelectCount"]
margin_left = -47.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 15.0
text = "0\\0"
align = 2
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Hide Select Count" = SubResource( 1 )
anims/RESET = SubResource( 2 )
"anims/Show Select Count" = SubResource( 3 )

[node name="InstructionsPanel" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.666667 )
position = Vector2( 514, 138 )
texture = ExtResource( 4 )
centered = false

[node name="Instructions" type="GridContainer" parent="InstructionsPanel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 175.0
margin_bottom = 52.0
rect_scale = Vector2( 0.7, 0.7 )
columns = 2

[node name="InputOptionsText" type="Label" parent="InstructionsPanel/Instructions"]
margin_right = 79.0
margin_bottom = 48.0
text = "Scroll Up:
Scroll Down:
Close Map:"
align = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="InputMappingsText" type="Label" parent="InstructionsPanel/Instructions"]
margin_left = 83.0
margin_right = 171.0
margin_bottom = 48.0
text = "Up
Down
Interact, Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MapBorder" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 212.0
margin_bottom = 358.0
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ViewportContainer" type="ViewportContainer" parent="MapBorder"]
margin_left = 8.0
margin_top = 8.0
margin_right = 206.0
margin_bottom = 349.0

[node name="Viewport" type="Viewport" parent="MapBorder/ViewportContainer"]
size = Vector2( 198, 341 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="Map" parent="MapBorder/ViewportContainer/Viewport" instance=ExtResource( 5 )]
